--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
 project(bustache VERSION 1.0.0 LANGUAGES CXX)
 
-# option(BUSTACHE_ENABLE_TESTING "Enable testing of the bustache library." ON)
+option(BUSTACHE_ENABLE_TESTING "Enable testing of the bustache library." ON)
 
 # Set the default CMAKE_BUILD_TYPE to Release.
 # This should be done before the project command since the latter can set
@@ -54,7 +54,8 @@ install(TARGETS ${PROJECT_NAME}
 )
 
 install(DIRECTORY include/ DESTINATION include)
-# if (BENCHMARK_ENABLE_TESTING)
-#     enable_testing()
-#     add_subdirectory(test)
-# endif()
+
+if (BUSTACHE_ENABLE_TESTING)
+    enable_testing()
+    add_subdirectory(test)
+endif()
