Make library target a static library
Compiling bustache as a shared library would require either a DEF file
or `__declspec(dllexport)` annotations for all exported functions. This
is necessary on Windows but also desirable on Unix-like platforms which
default to exporting *all* symbols.

Until annotations have been added, bustache is now unconditionally a
static library. (I don't see any benefits in supporting a shared library
build.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if (NOT CMAKE_BUILD_TYPE)
     "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
 endif()
 
-add_library(${PROJECT_NAME}
+add_library(${PROJECT_NAME} STATIC
     src/format.cpp
     src/generate.cpp
 )
@@ -87,4 +87,3 @@ endif()
 if (EXPORT_BUILD_DIR)
     export(PACKAGE ${PROJECT_NAME})
 endif()
-
