--- a/cmake/bustache-config.cmake.in
+++ b/cmake/bustache-config.cmake.in
@@ -1,7 +1,4 @@
+@PACKAGE_INIT@
 
-# Find all dependencies.
-include(CMakeFindDependencyMacro)
-find_dependency(Boost QUIET REQUIRED)
-
-# Import targets.
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
+check_required_components(fmt)
