--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,4 @@
-find_package(Catch REQUIRED)
-
-add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
+find_package(Catch2 REQUIRED)
 
 function(add_catch_test name)
     set(TEST_TARGET test_${name})
@@ -9,14 +6,14 @@ function(add_catch_test name)
         ${name}.cpp
     )
     target_link_libraries(${TEST_TARGET}
-        ${PROJECT_NAME} Catch
+        ${PROJECT_NAME} Catch2::Catch2
     )
-    set_target_properties(${TEST_TARGET} PROPERTIES
-        CXX_STANDARD 14
-    )
+    target_compile_features(${TEST_TARGET} PUBLIC cxx_std_20)
     add_test(${TEST_TARGET} ${TEST_TARGET})
 endfunction()
 
 add_catch_test(specs)
 add_catch_test(unresolved_handler)
 add_catch_test(udt)
+add_catch_test(inheritance)
+add_catch_test(split_tag)
