Fix fmt dependency in exported cmake config
- Find fmt as a required dependency
- Propagate compiler define to customers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,11 @@ if(BUSTACHE_USE_FMT)
     PUBLIC
         fmt::fmt
   )
-  add_compile_definitions(BUSTACHE_USE_FMT)
+  target_compile_definitions(
+    ${PROJECT_NAME}
+    PUBLIC
+      BUSTACHE_USE_FMT
+  )
 endif()
 
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
