Add test for Dynamic Names.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,3 +17,4 @@ add_catch_test(unresolved_handler)
 add_catch_test(udt)
 add_catch_test(inheritance)
 add_catch_test(split_tag)
+add_catch_test(dynamic_names)
